# fcitx5-whispercpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generic-loop.js  prompt.md  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
daemon/: __init__.py  dbus_service.py  main.py
dbus/: org.fcitx.Fcitx5.WhisperCpp.xml
docs/: 01.SPEC.md  PLAN.md  TODO.md  checklist.md
plugin/: CMakeLists.txt  dbus_client.cpp  dbus_client.h  whispercpp-addon.conf.in  whispercpp.conf  whispercpp_engine.cpp  whispercpp_engine.h  whispercpp_engine_factory.cpp
scripts/: install.sh  rebuild.sh  uninstall.sh
systemd/: fcitx5-whispercpp-daemon.service
tools/: configure_fcitx5.py  deconfigure_fcitx5.py  resolve_hf_model.py
