[project]
name = "fcitx5-whispercpp"
version = "0.0.1b1"
description = "Voice input plugin for fcitx5 using local whispercpp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "PyGObject>=3.42.0",
    "pydbus>=0.6.0",
    "pywhispercpp>=1.4.1",
    "sounddevice>=0.5.5",
]

[project.scripts]
fcitx5-whispercpp-daemon = "daemon.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff==0.11.0",
    "shellcheck-py>=0.11.0.1",
]
